# face-detect-track

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: profile_pipeline.py
src/movie_like_shots/: cli.py  pipeline.py
