[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-like-shots"
version = "0.1.0"
description = "Minimal face detection + tracking pipeline for movie-like video clips."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "filterpy>=1.4.5,<2",
  "gdown>=5.1.0,<6",
  "lap>=0.5.12,<1",
  "loguru>=0.7.2,<1",
  "numpy>=2.2.1,<3",
  "onnx>=1.16,<2",
  "onnxruntime>=1.17,<2",
  "opencv-python>=4.9,<5",
  "pandas>=2,<3",
  "PyYAML>=6,<7",
  "scikit-learn>=1.4,<2",
  "scipy>=1.10,<2",
]

[project.optional-dependencies]
botfacesort = [
  "torch>=2.2,<2.7",
]

[project.scripts]
movie-like-shots = "movie_like_shots.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
